--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SchülerPower Workshops</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Willkommen zu SchülerPower Workshops</h1>
-    <p>Lerne alles über Disziplin, Weiterbildung, Finanzen und sportliche Aktivitäten.</p>
+    <header>
+        <h1>Willkommen zu SchülerPower Workshops</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">Über uns</a></li>
+                <li><a href="#services">Workshops</a></li>
+                <li><a href="#contact">Kontakt</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="about">
+        <h2>Über uns</h2>
+        <p>Unsere Workshops helfen Schülern, Disziplin, Weiterbildung, Finanzen und sportliche Aktivitäten zu meistern.</p>
+    </section>
+    <footer id="contact">
+        <p>Kontaktieren Sie uns unter: info@schuelerpower.de</p>
+    </footer>
 </body>
 </html>
