--- a/index.html
+++ b/index.html
@@ -1,29 +1,41 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SchülerPower Workshops</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>3D Animation mit Three.js</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 </head>
 <body>
-    <header>
-        <h1>Willkommen zu SchülerPower Workshops</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">Über uns</a></li>
-                <li><a href="#services">Workshops</a></li>
-                <li><a href="#contact">Kontakt</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section id="about">
-        <h2>Über uns</h2>
-        <p>Unsere Workshops helfen Schülern, Disziplin, Weiterbildung, Finanzen und sportliche Aktivitäten zu meistern.</p>
-    </section>
-    <footer id="contact">
-        <p>Kontaktieren Sie uns unter: info@schuelerpower.de</p>
-    </footer>
+  <script>
+    // Szene erstellen
+    const scene = new THREE.Scene();
+
+    // Kamera hinzufügen
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+    camera.position.z = 5;
+
+    // Renderer einrichten
+    const renderer = new THREE.WebGLRenderer();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.body.appendChild(renderer.domElement);
+
+    // Würfel erstellen
+    const geometry = new THREE.BoxGeometry();
+    const material = new THREE.MeshBasicMaterial({ color: 0x00ff00, wireframe: true });
+    const cube = new THREE.Mesh(geometry, material);
+    scene.add(cube);
+
+    // Animation
+    function animate() {
+      requestAnimationFrame(animate);
+      cube.rotation.x += 0.01;
+      cube.rotation.y += 0.01;
+      renderer.render(scene, camera);
+    }
+
+    animate();
+  </script>
 </body>
 </html>
+
