Erster Entwurf.html

--- a/index.html
+++ b/index.html
@@ -3,49 +3,203 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3D Box</title>
+  <title>Motivationsworkshops für Oberstufe</title>
   <style>
-    .container {
-      perspective: 1000px;
+    body {
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f0f4f8;
     }
-    .box {
-      width: 200px;
-      height: 200px;
+
+    /* Header Style */
+    header {
+      background: linear-gradient(135deg, #6dd5ed, #2193b0);
+      color: white;
+      padding: 20px 0;
+      text-align: center;
       position: relative;
-      transform-style: preserve-3d;
-      transform: rotateX(45deg) rotateY(45deg);
-      animation: rotate 5s infinite linear;
     }
-    .box div {
-      position: absolute;
-      width: 200px;
-      height: 200px;
-      background: rgba(255, 100, 100, 0.8);
-      border: 1px solid #000;
+
+    header h1 {
+      font-size: 3rem;
+      animation: fadeIn 1.5s ease-in-out;
     }
-    .front {
-      transform: translateZ(100px);
+
+    header p {
+      font-size: 1.2rem;
+      margin-top: 10px;
+      animation: fadeIn 2s ease-in-out;
     }
-    .back {
-      transform: rotateY(180deg) translateZ(100px);
+
+    /* Keyframes for header animation */
+    @keyframes fadeIn {
+      0% { opacity: 0; }
+      100% { opacity: 1; }
     }
-    @keyframes rotate {
-      from {
-        transform: rotateX(0deg) rotateY(0deg);
-      }
-      to {
-        transform: rotateX(360deg) rotateY(360deg);
-      }
+
+    /* Hero Section */
+    .hero {
+      background-color: #ffb347;
+      padding: 100px 20px;
+      text-align: center;
+    }
+
+    .hero h2 {
+      font-size: 2.5rem;
+      margin: 0 0 20px;
+      animation: slideIn 1.5s ease-out;
+    }
+
+    .hero p {
+      font-size: 1.5rem;
+      margin: 20px 0;
+      animation: slideIn 2s ease-out;
+    }
+
+    .hero button {
+      padding: 15px 30px;
+      background-color: #2193b0;
+      border: none;
+      color: white;
+      font-size: 1.2rem;
+      cursor: pointer;
+      transition: transform 0.3s;
+    }
+
+    .hero button:hover {
+      transform: scale(1.1);
+    }
+
+    @keyframes slideIn {
+      0% { transform: translateY(100px); opacity: 0; }
+      100% { transform: translateY(0); opacity: 1; }
+    }
+
+    /* Workshop Section */
+    .workshops {
+      padding: 50px 20px;
+      display: flex;
+      justify-content: space-around;
+      flex-wrap: wrap;
+    }
+
+    .workshop-card {
+      background-color: #fff;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      width: 300px;
+      margin: 20px;
+      padding: 20px;
+      text-align: center;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .workshop-card:hover {
+      transform: scale(1.05);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    }
+
+    .workshop-card h3 {
+      font-size: 1.5rem;
+      color: #333;
+    }
+
+    .workshop-card p {
+      font-size: 1rem;
+      color: #555;
+    }
+
+    /* Testimonial Slider */
+    .testimonials {
+      background-color: #2193b0;
+      color: white;
+      padding: 50px 20px;
+      text-align: center;
+    }
+
+    .testimonial-slider {
+      display: flex;
+      overflow-x: scroll;
+      scroll-snap-type: x mandatory;
+    }
+
+    .testimonial {
+      background-color: white;
+      color: #333;
+      padding: 20px;
+      border-radius: 10px;
+      margin: 0 10px;
+      min-width: 300px;
+      scroll-snap-align: center;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Footer */
+    footer {
+      background-color: #333;
+      color: white;
+      text-align: center;
+      padding: 20px;
+    }
+
+    footer p {
+      margin: 0;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="box">
-      <div class="front">Front</div>
-      <div class="back">Back</div>
+
+  <!-- Header -->
+  <header>
+    <h1>Motivationsworkshops für Schüler</h1>
+    <p>Entfache deine Motivation und erreiche dein volles Potenzial!</p>
+  </header>
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <h2>Werde Teil unserer Workshops</h2>
+    <p>Für Schüler, die mehr erreichen wollen!</p>
+    <button>Anmelden</button>
+  </section>
+
+  <!-- Workshops Section -->
+  <section class="workshops">
+    <div class="workshop-card">
+      <h3>Selbstmotivation stärken</h3>
+      <p>Lerne, wie du dich selbst zu Höchstleistungen anspornen kannst.</p>
     </div>
-  </div>
+    <div class="workshop-card">
+      <h3>Zielsetzung</h3>
+      <p>Erfahre, wie du realistische Ziele setzt und diese Schritt für Schritt erreichst.</p>
+    </div>
+    <div class="workshop-card">
+      <h3>Prüfungsangst überwinden</h3>
+      <p>Tipps und Techniken, um entspannt in die Prüfungen zu gehen.</p>
+    </div>
+  </section>
+
+  <!-- Testimonials Section -->
+  <section class="testimonials">
+    <h2>Was unsere Teilnehmer sagen</h2>
+    <div class="testimonial-slider">
+      <div class="testimonial">
+        <p>"Dieser Workshop hat mir geholfen, meine Ziele klar zu definieren!" - Schüler A</p>
+      </div>
+      <div class="testimonial">
+        <p>"Ich fühle mich motivierter denn je, meine Prüfungen zu bestehen." - Schüler B</p>
+      </div>
+      <div class="testimonial">
+        <p>"Einfach genial! Die Techniken sind super umsetzbar." - Schüler C</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2024 Motivationsworkshops. Alle Rechte vorbehalten.</p>
+  </footer>
+
 </body>
 </html>
 
